manifests/app-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: snap-report-frontend-deployment
  labels:
    app: snap-report-frontend-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: snap-report-frontend-app
  template:
    metadata:
      labels:
        app: snap-report-frontend-app
    spec:
      containers:
      - name: snap-report-frontend-app-deployment
        image: docker-hosted.snap-ci.ovh/snap-reports-frontend:latest
        resources:
          limits:
            cpu: "200m"
            memory: "4Gi"
          requests:
            cpu: "100m"
        ports:
        - containerPort: 8080
