manifests/service.yaml
---
apiVersion: v1
kind: Service
metadata:
 name: snap-report-frontend-service
spec:
 selector:
   # Selector for Pods
   app: snap-report-frontend-app
 ports:
   # Port Map
 - name: http
   port: 80
   targetPort: 80
   protocol: TCP
 type: ClusterIP
